docs/0.0.0.0/_sources/gallery/sellmeier/plot_water.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/sellmeier/plot_water.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_sellmeier_plot_water.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_sellmeier_plot_water.py:


Plot the Refractive Index of Optical Material: Water
=====================================================

This module demonstrates the usage of the PyOptik library to calculate and plot the refractive index of the optical material water over a specified range of wavelengths.

.. GENERATED FROM PYTHON SOURCE LINES 10-23



.. image-sg:: /gallery/sellmeier/images/sphx_glr_plot_water_001.png
   :alt: Refractive Index vs. Wavelength: [water]
   :srcset: /gallery/sellmeier/images/sphx_glr_plot_water_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy
    from TypedUnit import ureg

    from PyOptik import MaterialBank

    # Initialize the material with the Sellmeier model
    material = MaterialBank.water

    # Calculate refractive index at specific wavelengths
    RI = material.compute_refractive_index(wavelength=[800, 900] * ureg.nanometer)

    # Display calculated refractive indices at sample wavelengths
    material.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.234 seconds)


.. _sphx_glr_download_gallery_sellmeier_plot_water.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_water.ipynb <plot_water.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_water.py <plot_water.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
